--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Home"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
@@ -20,7 +20,13 @@
         </activity>
         <activity
             android:name=".ExerciseActivity"
-            android:label="Exercises"></activity>
+            android:label="Exercises" />
+        <activity android:name=".ProfileActivity"
+            android:label="Profile" />
+        <activity android:name=".MyWorkoutActivity"
+            android:label="My Workouts" />
+        <activity android:name=".StartWorkoutActivity"
+            android:label="Start Workout" />
     </application>
 
 </manifest>
