Fragment now finally works! Now try to implement Slider with ViewPager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity
             android:name=".StartWorkoutActivity"
             android:label="Start Workout" />
-        <activity android:name=".ExerciseInfoActivity"></activity>
+        <activity android:name=".ExerciseInfoActivity"
+            android:label="Exercise"/>
     </application>
 
 </manifest>
