Fragment now finally works! Now try to implement Slider with ViewPager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
             android:name=".StartWorkoutActivity"
             android:label="Start Workout" />
         <activity android:name=".ExerciseInfoActivity"
+            android:parentActivityName=".ExerciseActivity"
             android:label="Exercise"/>
     </application>
 
