Working version before trying to add Firebase!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         <activity
             android:name=".CreateWorkoutActivity"
             android:label="Create Workout"
-            android:parentActivityName=".MyWorkoutActivity"/>
+            android:parentActivityName=".MyWorkoutActivity" />
+        <activity android:name=".CreateCustomExerciseActivity"></activity>
     </application>
 
 </manifest>
