Can now add customExercise to workout, but have to find out how to construct the data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
             android:name=".CreateWorkoutActivity"
             android:label="Create Workout"
             android:parentActivityName=".MyWorkoutActivity" />
-        <activity android:name=".CreateCustomExerciseActivity"></activity>
+        <activity android:name=".CreateCustomExerciseActivity" />
+        <activity android:name=".AddExerciseToWorkoutActivity"></activity>
     </application>
 
 </manifest>
