--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.google.firebase:firebase-core:11.4.2'
     compile 'com.google.firebase:firebase-database:11.4.2'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8' // Enables gif
     testCompile 'junit:junit:4.12'
 }
 
