--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.4.2'
     compile 'com.google.firebase:firebase-database:11.4.2'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8' // Enables gif
+    compile 'com.firebaseui:firebase-ui-storage:0.6.0' // FirebaseUI Storage only
     testCompile 'junit:junit:4.12'
 }
 
