--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.4.2'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.8' // Enables gif
     compile 'com.firebaseui:firebase-ui-storage:0.6.0' // FirebaseUI Storage only
+    compile 'com.firebaseui:firebase-ui-auth:3.1.0' // For user authentication
+
     testCompile 'junit:junit:4.12'
 }
 
