--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,9 @@
             android:parentActivityName=".MyWorkoutActivity" />
         <activity android:name=".CreateCustomExerciseActivity" />
         <activity android:name=".AddExerciseToWorkoutActivity" />
-        <activity android:name=".MyWorkoutInfoActivity"></activity>
+        <activity android:name=".MyWorkoutInfoActivity" />
+        <activity android:name=".WorkoutDoneActivity"
+            android:label="Workout Done"/>
     </application>
 
 </manifest>
